--- a/design.html
+++ b/design.html
@@ -19,21 +19,21 @@
   </head>
 
   <body>
-    <!-- 모바일용 메뉴 -->
-    <div class="mobile-menu">
-      <ul class="mobile-gnb">
-        <li><a href="./index.html">HOME</a></li>
-        <li><a href="./about.html">ABOUT</a></li>
-        <li><a href="./education.html">EDUCATION</a></li>
-        <li><a href="./design.html">DESIGN</a></li>
-        <li><a href="./marketing.html">MARKETING</a></li>
-        <li><a href="./analytics.html">ANALYTICS</a></li>
-      </ul>
-      <button class="mobile-btn-close"><i class="hidden">닫기</i></button>
-    </div>
-    <!-- 모바일용 메뉴 end -->
-
     <header id="header">
+      <!-- 모바일용 메뉴 -->
+      <div class="mobile-menu">
+        <ul class="mobile-gnb">
+          <li><a href="./index.html">HOME</a></li>
+          <li><a href="./about.html">ABOUT</a></li>
+          <li><a href="./education.html">EDUCATION</a></li>
+          <li><a href="./design.html">DESIGN</a></li>
+          <li><a href="./marketing.html">MARKETING</a></li>
+          <li><a href="./analytics.html">ANALYTICS</a></li>
+        </ul>
+        <button class="mobile-btn-close"><i class="hidden">닫기</i></button>
+      </div>
+      <!-- 모바일용 메뉴 end -->
+
       <div class="inner">
         <nav>
           <h1 class="logo">
@@ -175,10 +175,70 @@
                     <strong>웹사이트 디자인</strong>
                   </a>
                 </li>
+                <li class="swiper-slide portfolio-item">
+                  <a href="#">
+                    <figure><img src="./img/about-1.jpg" alt="" /></figure>
+                    <strong>쇼핑몰 디자인</strong>
+                  </a>
+                </li>
+                <li class="swiper-slide portfolio-item">
+                  <a href="#">
+                    <figure><img src="./img/about-1.jpg" alt="" /></figure>
+                    <strong>상세 페이지</strong>
+                  </a>
+                </li>
+                <li class="swiper-slide portfolio-item">
+                  <a href="#">
+                    <figure><img src="./img/about-1.jpg" alt="" /></figure>
+                    <strong>배너 디자인</strong>
+                  </a>
+                </li>
+                <li class="swiper-slide portfolio-item">
+                  <a href="#">
+                    <figure><img src="./img/about-1.jpg" alt="" /></figure>
+                    <strong>사진촬영</strong>
+                  </a>
+                </li>
+                <li class="swiper-slide portfolio-item">
+                  <a href="#">
+                    <figure><img src="./img/about-1.jpg" alt="" /></figure>
+                    <strong>웹사이트 디자인</strong>
+                  </a>
+                </li>
               </ul>
 
               <div class="swiper portfolio-all-2">
                 <ul class="swiper-wrapper portfolio-wrapper">
+                  <li class="swiper-slide portfolio-item">
+                    <a href="#">
+                      <figure><img src="./img/about-2.jpg" alt="" /></figure>
+                      <strong>쇼핑몰 디자인</strong>
+                    </a>
+                  </li>
+                  <li class="swiper-slide portfolio-item">
+                    <a href="#">
+                      <figure><img src="./img/about-2.jpg" alt="" /></figure>
+                      <strong>상세 페이지</strong>
+                    </a>
+                  </li>
+                  <li class="swiper-slide portfolio-item">
+                    <a href="#">
+                      <figure><img src="./img/about-2.jpg" alt="" /></figure>
+                      <strong>배너 디자인</strong>
+                    </a>
+                  </li>
+                  <li class="swiper-slide portfolio-item">
+                    <a href="#">
+                      <figure><img src="./img/about-2.jpg" alt="" /></figure>
+                      <strong>사진촬영</strong>
+                    </a>
+                  </li>
+                  <li class="swiper-slide portfolio-item">
+                    <a href="#">
+                      <figure><img src="./img/about-2.jpg" alt="" /></figure>
+                      <strong>웹사이트 디자인</strong>
+                    </a>
+                  </li>
                   <li class="swiper-slide portfolio-item">
                     <a href="#">
                       <figure><img src="./img/about-2.jpg" alt="" /></figure>
@@ -224,12 +284,6 @@
             <h4 class="foot-logo">
               <a href="index.html"><i class="hidden">창공연구소</i></a>
             </h4>
-            <ul class="foot-nav">
-              <li><a href="./about.html">회사 소개</a></li>
-              <li><a href="#">이용약관</a></li>
-              <li><a href="#">개인정보처리방침</a></li>
-              <li><a href="#">이용 안내</a></li>
-            </ul>
           </div>
 
           <div class="foot-con">
