--- a/index.html
+++ b/index.html
@@ -22,13 +22,58 @@
       <!-- 모바일용 메뉴 -->
       <div class="mobile-menu">
         <ul class="mobile-gnb">
-          <li><a href="./index.html">HOME</a></li>
-          <li><a href="./about.html">ABOUT</a></li>
-          <li><a href="./education.html">EDUCATION</a></li>
-          <li><a href="./design.html">DESIGN</a></li>
-          <li><a href="./marketing.html">MARKETING</a></li>
-          <li><a href="./analytics.html">ANALYTICS</a></li>
+          <li><a href="./about.html">회사 소개</a></li>
+
+          <li>
+            <a href="#">브랜딩 디자인</a>
+            <ul class="mobile-submenu">
+              <li>
+                <a href="./design.html"><i>웹사이트</i></a>
+              </li>
+              <li>
+                <a href="./design.html"><i>상세페이지</i></a>
+              </li>
+              <li>
+                <a href="./design.html"><i>네이밍</i></a>
+              </li>
+            </ul>
+          </li>
+
+          <li>
+            <a href="#">광고 · 마케팅</a>
+            <ul class="mobile-submenu">
+              <li>
+                <a href="./design.html"><i>MARKETING</i></a>
+              </li>
+              <li>
+                <a href="./design.html"><i>ANALYTICS</i></a>
+              </li>
+              <li>
+                <a href="./design.html"><i>유튜브 쇼핑</i></a>
+              </li>
+            </ul>
+          </li>
+
+          <li>
+            <a href="#">교육 프로그램</a>
+            <ul class="mobile-submenu">
+              <li>
+                <a href="./education.html"><i>CEO종합반</i></a>
+              </li>
+              <li>
+                <a href="./education.html"><i>레벨업 클래스</i></a>
+              </li>
+              <li>
+                <a href="./education.html"><i>쇼츠</i></a>
+              </li>
+            </ul>
+          </li>
+
+          <li><a href="#">포트폴리오</a></li>
+
+          <li><a href="#">고객지원</a></li>
         </ul>
+
         <button class="mobile-btn-close"><i class="hidden">닫기</i></button>
       </div>
       <!-- 모바일용 메뉴 end -->
@@ -39,20 +84,61 @@
             <a href="./index.html"><i class="hidden">창공연구소</i></a>
           </h1>
 
-          <div class="nav-con">
-            <ul class="gnb">
-              <li><a href="./about.html">ABOUT</a></li>
-              <li>
-                <a href="./education.html">EDUCATION</a>
-              </li>
-              <li><a href="./design.html">DESIGN</a></li>
-              <li><a href="./marketing.html">MARKETING</a></li>
-              <li><a href="./analytics.html">ANALYTICS</a></li>
-            </ul>
+          <ul class="gnb">
+            <li><a href="./about.html">회사 소개</a></li>
 
-            <div class="more-btn">
-              <a href="#"><i class="hidden">더보기</i></a>
-            </div>
+            <li>
+              <a href="#">브랜딩 디자인</a>
+              <ul class="submenu">
+                <li>
+                  <a href="./design.html"><i>웹사이트</i></a>
+                </li>
+                <li>
+                  <a href="./design.html"><i>상세페이지</i></a>
+                </li>
+                <li>
+                  <a href="./design.html"><i>네이밍</i></a>
+                </li>
+              </ul>
+            </li>
+
+            <li>
+              <a href="#">광고 · 마케팅</a>
+              <ul class="submenu">
+                <li>
+                  <a href="./design.html"><i>MARKETING</i></a>
+                </li>
+                <li>
+                  <a href="./design.html"><i>ANALYTICS</i></a>
+                </li>
+                <li>
+                  <a href="./design.html"><i>유튜브 쇼핑</i></a>
+                </li>
+              </ul>
+            </li>
+
+            <li>
+              <a href="#">교육 프로그램</a>
+              <ul class="submenu">
+                <li>
+                  <a href="./education.html"><i>CEO종합반</i></a>
+                </li>
+                <li>
+                  <a href="./education.html"><i>레벨업 클래스</i></a>
+                </li>
+                <li>
+                  <a href="./education.html"><i>쇼츠</i></a>
+                </li>
+              </ul>
+            </li>
+
+            <li><a href="#">포트폴리오</a></li>
+
+            <li><a href="#">고객지원</a></li>
+          </ul>
+
+          <div class="more-btn">
+            <a href="#"><i class="hidden">더보기</i></a>
           </div>
         </nav>
       </div>
@@ -64,75 +150,67 @@
           <div class="swiper-wrapper visual-wrapper">
             <!-- Slides -->
             <div class="swiper-slide">
-              <a href="./education.html">
-                <picture
-                  ><source
-                    media="(max-width: 720px)"
-                    srcset="
-                      //ecimg.cafe24img.com/pg270b59889532028/cglab7/web/upload/category/editor/2023/04/20/cglab-1-edu-m.jpg
-                    "
-                  />
-                  <img
-                    src="https://file.cafe24cos.com/banner-admin-live/upload/cglab7/80a8b9fd-919b-48e7-938d-c44b22aa60f4.jpeg"
-                    style="width: 100%"
-                  />
-                  &nbsp;</picture
-                >
-              </a>
+              <picture
+                ><source
+                  media="(max-width: 720px)"
+                  srcset="
+                    //ecimg.cafe24img.com/pg270b59889532028/cglab7/web/upload/category/editor/2023/04/20/cglab-1-edu-m.jpg
+                  "
+                />
+                <img
+                  src="https://file.cafe24cos.com/banner-admin-live/upload/cglab7/80a8b9fd-919b-48e7-938d-c44b22aa60f4.jpeg"
+                  style="width: 100%"
+                />
+                &nbsp;</picture
+              >
             </div>
 
             <div class="swiper-slide">
-              <a href="./marketing.html">
-                <picture
-                  ><source
-                    media="(max-width: 720px)"
-                    srcset="
-                      //ecimg.cafe24img.com/pg270b59889532028/cglab7/web/upload/category/editor/2023/04/20/cglab-3-marketing-m.jpg
-                    "
-                  />
-                  <img
-                    src="https://file.cafe24cos.com/banner-admin-live/upload/cglab7/b5942602-17a2-4794-b6cc-5112114c5d68.jpeg"
-                    style="width: 100%"
-                  />
-                  &nbsp;</picture
-                >
-              </a>
+              <picture
+                ><source
+                  media="(max-width: 720px)"
+                  srcset="
+                    //ecimg.cafe24img.com/pg270b59889532028/cglab7/web/upload/category/editor/2023/04/20/cglab-3-marketing-m.jpg
+                  "
+                />
+                <img
+                  src="https://file.cafe24cos.com/banner-admin-live/upload/cglab7/b5942602-17a2-4794-b6cc-5112114c5d68.jpeg"
+                  style="width: 100%"
+                />
+                &nbsp;</picture
+              >
             </div>
 
             <div class="swiper-slide">
-              <a href="./analytics.html">
-                <picture
-                  ><source
-                    media="(max-width: 720px)"
-                    srcset="
-                      //ecimg.cafe24img.com/pg270b59889532028/cglab7/web/upload/category/editor/2023/04/20/0505.jpg
-                    "
-                  />
-                  <img
-                    src="//ecimg.cafe24img.com/pg270b59889532028/cglab7/web/upload/category/editor/2023/04/20/05056.jpg"
-                    style="width: 100%"
-                  />
-                  &nbsp;</picture
-                >
-              </a>
+              <picture
+                ><source
+                  media="(max-width: 720px)"
+                  srcset="
+                    //ecimg.cafe24img.com/pg270b59889532028/cglab7/web/upload/category/editor/2023/04/20/0505.jpg
+                  "
+                />
+                <img
+                  src="//ecimg.cafe24img.com/pg270b59889532028/cglab7/web/upload/category/editor/2023/04/20/05056.jpg"
+                  style="width: 100%"
+                />
+                &nbsp;</picture
+              >
             </div>
 
             <div class="swiper-slide">
-              <a href="./design.html">
-                <picture
-                  ><source
-                    media="(max-width: 720px)"
-                    srcset="
-                      //ecimg.cafe24img.com/pg270b59889532028/cglab7/web/upload/category/editor/2023/04/20/cglab-2-design-m.jpg
-                    "
-                  />
-                  <img
-                    src="https://file.cafe24cos.com/banner-admin-live/upload/cglab7/8ce1652b-c863-4eb0-99fc-7998a5c4f4e9.jpeg"
-                    style="width: 100%"
-                  />
-                  &nbsp;</picture
-                >
-              </a>
+              <picture
+                ><source
+                  media="(max-width: 720px)"
+                  srcset="
+                    //ecimg.cafe24img.com/pg270b59889532028/cglab7/web/upload/category/editor/2023/04/20/cglab-2-design-m.jpg
+                  "
+                />
+                <img
+                  src="https://file.cafe24cos.com/banner-admin-live/upload/cglab7/8ce1652b-c863-4eb0-99fc-7998a5c4f4e9.jpeg"
+                  style="width: 100%"
+                />
+                &nbsp;</picture
+              >
             </div>
           </div>
         </div>
