--- a/design.html
+++ b/design.html
@@ -189,7 +189,7 @@
             <div class="typ">
               <dl class="price-card-title">
                 <dt>기획 + 디자인</dt>
-                <dd>Lorem ipsum dolor sit amet.</dd>
+                <dd>사진 있으신 고객분들에게 적합합니다.</dd>
               </dl>
               <ul class="price-card">
                 <li>
@@ -205,7 +205,7 @@
             <div class="typ">
               <dl class="price-card-title">
                 <dt>촬영 + 기획 + 디자인</dt>
-                <dd>Lorem ipsum dolor sit amet.</dd>
+                <dd>사진부터 디자인까지 모든걸 한번에 해결해드립니다.</dd>
               </dl>
               <ul class="price-card">
                 <li>
