--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
             <a href="#">광고 · 마케팅</a>
             <ul class="mobile-submenu">
               <li>
-                <a href="./design.html"><i>MARKETING</i></a>
+                <a href="./marketing.html"><i>MARKETING</i></a>
               </li>
               <li>
-                <a href="./design.html"><i>ANALYTICS</i></a>
+                <a href="./analytics.html"><i>ANALYTICS</i></a>
               </li>
               <li>
-                <a href="./design.html"><i>유튜브 쇼핑</i></a>
+                <a href="#"><i>유튜브 쇼핑</i></a>
               </li>
             </ul>
           </li>
