--- a/analytics.html
+++ b/analytics.html
@@ -105,7 +105,7 @@
 
             <li>
               <a href="#">광고 · 마케팅</a>
-              <ul class="mobile-submenu">
+              <ul class="submenu">
                 <li>
                   <a href="./marketing.html"><i>MARKETING</i></a>
                 </li>
