--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <div class="inner">
           <div class="education-all">
             <div class="education-con">
-              <h4 class="education-title">EDUCATION</h4>
+              <h4 class="education-title">CEO종합반</h4>
               <div class="education-text">
                 <strong>온라인 쇼핑몰 성공 가이드</strong>
                 <p>
