--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
             </ul>
           </li>
 
-          <li><a href="#">포트폴리오</a></li>
+          <li><a href="./portfolio.html">포트폴리오</a></li>
 
-          <li><a href="#">고객지원</a></li>
+          <li><a href="./service.html">고객지원</a></li>
         </ul>
 
         <button class="mobile-btn-close"><i class="hidden">닫기</i></button>
@@ -91,13 +91,14 @@
               <a href="#">브랜딩 디자인</a>
               <ul class="submenu">
                 <li>
-                  <a href="./design.html"><i>웹사이트</i></a>
+                  <a href="./wep.html"><i>웹사이트</i></a>
                 </li>
                 <li>
-                  <a href="./design.html"><i>상세페이지</i></a>
+                  <a href="./design.html"><i>SNS</i></a>
                 </li>
+
                 <li>
-                  <a href="./design.html"><i>네이밍</i></a>
+                  <a href="./design.html"><i>인쇄</i></a>
                 </li>
               </ul>
             </li>
@@ -132,9 +133,9 @@
               </ul>
             </li>
 
-            <li><a href="#">포트폴리오</a></li>
+            <li><a href="./portfolio.html">포트폴리오</a></li>
 
-            <li><a href="#">고객지원</a></li>
+            <li><a href="./service.html">고객지원</a></li>
           </ul>
 
           <div class="more-btn">
