서브 추가중

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             <a href="#">브랜딩 디자인</a>
             <ul class="mobile-submenu">
               <li>
-                <a href="./design.html"><i>웹사이트</i></a>
+                <a href="./wep.html"><i>웹사이트</i></a>
               </li>
               <li>
-                <a href="./design.html"><i>상세페이지</i></a>
+                <a href="#"><i>상세페이지</i></a>
               </li>
               <li>
-                <a href="./design.html"><i>네이밍</i></a>
+                <a href="#"><i>네이밍</i></a>
               </li>
             </ul>
           </li>
