--- a/service.html
+++ b/service.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/sub-common.css" />
-    <link rel="stylesheet" href="./css/portplio.css" />
+    <link rel="stylesheet" href="./css/marketing.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -50,7 +50,7 @@
                 <a href="./analytics.html"><i>ANALYTICS</i></a>
               </li>
               <li>
-                <a href="./youtube.html"><i>유튜브 쇼핑</i></a>
+                <a href="#"><i>유튜브 쇼핑</i></a>
               </li>
             </ul>
           </li>
@@ -148,81 +148,51 @@
     <div id="main">
       <section class="visual">
         <div class="visual-text">
-          <h2>포트폴리오</h2>
-          <p>창공연구소의 다양한 포토폴리오를 확인 해보세요.</p>
+          <h2>고객지원</h2>
+          <p>제작문의 및 상담을 통해 도움을 받으세요</p>
         </div>
-        <figure><img src="./img/visual-4-1.jpg" alt="#" /></figure>
+        <figure><img src="./img/visual-5-1.jpg" alt="#" /></figure>
       </section>
 
-      <section class="event">
+      <section class="question">
         <div class="inner">
-          <div class="event-title" data-aos="fade-up" data-aos-delay="200">
-            <h3>이벤트로 새로운 경험과 혜택을 누리세요</h3>
-          </div>
+          <h4 class="question-title">자주 묻는 질문</h4>
 
-          <ul class="event-list" data-aos="fade-up" data-aos-delay="300">
+          <ul class="question-list">
             <li>
-              <figure><img src="./img/event-list-1.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>따릉이 현장 안내창구</dt>
-                <dd>2024. 4. 17 ~ 12. 31</dd>
-              </dl>
+              <strong>가격변동은 어떻게 되나요?</strong>
+
+              <div class="answer-wrap">
+                <p>
+                  네이버 검색광고를 1순위로 하며, 네이버는 국내 검색점유율의 70%
+                  이상을 차지하고 있어 가장 효과적인 검색광고 시장으로
+                  검색광고를 통해 사이트를 효과적으로 홍보할 수 있습니다.
+                </p>
+              </div>
             </li>
             <li>
-              <figure><img src="./img/event-list-2.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>따릉이길 스탬프 투어</dt>
-                <dd>2024. 9. 2 ~ 11. 30</dd>
-              </dl>
+              <strong> 어떤식으로 제작 되나요?</strong>
+
+              <div class="answer-wrap">
+                <p>
+                  인스타, 블로그, 페이스북 등 2030, 40대 많은 사람들이 많은
+                  시간을 소비하는 SNS는 로그인 기반으로 정확한 타겟을 찾아 광고
+                  전달이 효율적으로 전달할 수 있는 매체입니다. 브랜드 인지도
+                  향상효과와 정확한 타겟팅을 통한 소통과 홍보 합리적인 광고
+                  비용에 비해 효과가 커질 수 있습니다.
+                </p>
+              </div>
             </li>
             <li>
-              <figure><img src="./img/event-list-3.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>따릉이길 SNS이벤트 개최</dt>
-                <dd>2024. 9. 6 ~ 11. 30</dd>
-              </dl>
-            </li>
-            <li>
-              <figure><img src="./img/event-list-4.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>이벤트 리뷰를 부탁해</dt>
-                <dd>2024. 10. 11 ~ 11. 29</dd>
-              </dl>
-            </li>
-            <li>
-              <figure><img src="./img/event-list-5.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>티머니GO X 따릉이 친구초대 이벤트</dt>
-                <dd>2024. 10. 14 ~ 예산 소진 시까지</dd>
-              </dl>
-            </li>
-            <li>
-              <figure><img src="./img/event-list-6.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>서울 자전거도로, 이름을 지어주세요.</dt>
-                <dd>2024. 5. 10 ~ 6. 6</dd>
-              </dl>
-            </li>
-            <li>
-              <figure><img src="./img/event-list-7.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>따릉이길 추천 공모전</dt>
-                <dd>2024. 5. 10 ~ 6. 6</dd>
-              </dl>
-            </li>
-            <li>
-              <figure><img src="./img/event-list-8.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>따릉이와 함께 봄 인증샷 찍어요!</dt>
-                <dd>2023. 4. 10 ~ 4. 23</dd>
-              </dl>
-            </li>
-            <li>
-              <figure><img src="./img/event-list-9.jpg" alt="#" /></figure>
-              <dl class="event-text">
-                <dt>따릉이GO 지구사랑 챌린지</dt>
-                <dd>2022. 6. 13 ~ 7. 17</dd>
-              </dl>
+              <strong>강의 관련 안내는 어디서 자세히 받을수 있나요?</strong>
+
+              <div class="answer-wrap">
+                <p>
+                  네이버, 다음 등 다양한 입점 형태로 쇼핑몰에 따른 적합한 광고
+                  형태와 등록 등 효율적인 연결을 통해 고객들의 유입과 잠재 고객
+                  확보 등 매출 증대 효과를 동시에 누릴 수 있습니다.
+                </p>
+              </div>
             </li>
           </ul>
         </div>
