--- a/wep.html
+++ b/wep.html
@@ -33,10 +33,10 @@
                 <a href="./wep.html"><i>웹사이트</i></a>
               </li>
               <li>
-                <a href="./design.html"><i>상세페이지</i></a>
+                <a href="#"><i>상세페이지</i></a>
               </li>
               <li>
-                <a href="./design.html"><i>네이밍</i></a>
+                <a href="#"><i>네이밍</i></a>
               </li>
             </ul>
           </li>
@@ -96,10 +96,10 @@
                   <a href="./design.html"><i>웹사이트</i></a>
                 </li>
                 <li>
-                  <a href="./design.html"><i>상세페이지</i></a>
+                  <a href="#"><i>상세페이지</i></a>
                 </li>
                 <li>
-                  <a href="./design.html"><i>네이밍</i></a>
+                  <a href="#"><i>네이밍</i></a>
                 </li>
               </ul>
             </li>
