--- a/design.html
+++ b/design.html
@@ -32,10 +32,10 @@
                 <a href="./wep.html"><i>웹사이트</i></a>
               </li>
               <li>
-                <a href="./design.html"><i>상세페이지</i></a>
+                <a href="#"><i>상세페이지</i></a>
               </li>
               <li>
-                <a href="./design.html"><i>네이밍</i></a>
+                <a href="#"><i>네이밍</i></a>
               </li>
             </ul>
           </li>
@@ -95,10 +95,10 @@
                   <a href="./wep.html"><i>웹사이트</i></a>
                 </li>
                 <li>
-                  <a href="./design.html"><i>상세페이지</i></a>
+                  <a href="#"><i>상세페이지</i></a>
                 </li>
                 <li>
-                  <a href="./design.html"><i>네이밍</i></a>
+                  <a href="#"><i>네이밍</i></a>
                 </li>
               </ul>
             </li>
